# cheat.sheets

./: LICENSE  README.md
sheets/: Bash-Snippets  MegaCli  Solidity  Xephyr  airport  apk  apt-cache  apt-config  apt-get  apt-history  apt-key  arp  arpwatch  aspell  asterisk  autoflake  autopep8  awk  aws  awscli  az  azure  bandit  baresip  bash  bash-snippets  black  blkid  blktrace  bmon  bonnie  btrfs  bzr  c++  caffeinate  cargo  cargo-audit  cargo-bench  cargo-build  cargo-check  (+415 more)
sheets/_assembly/: _info.yaml
sheets/_awk/: _info.yaml
sheets/_axiom/: _info.yaml
sheets/_bash/: _info.yaml  forkbomb  shortcuts
sheets/_bf/: _info.yaml
sheets/_c/: _info.yaml
sheets/_chapel/: _info.yaml
sheets/_clean/: _info.yaml
sheets/_clojure/: _info.yaml
sheets/_coffee/: _info.yaml
sheets/_cpp/: _info.yaml  arrays  class  func  hello  if  loops  pointers  struct  types  vector
sheets/_csharp/: _info.yaml
sheets/_d/: _info.yaml
sheets/_dart/: _info.yaml
sheets/_db2/: cli  dcl  ddl  dml  general  listing-and-describing  queries  sqlpl  tcl
sheets/_delphi/: _info.yaml
sheets/_dylan/: _info.yaml
sheets/_eiffel/: _info.yaml
sheets/_elisp/: _info.yaml
sheets/_elixir/: _info.yaml
sheets/_elm/: _info.yaml  hello
sheets/_emacs/: _info.yaml  dired  macros  telnet
sheets/_erlang/: _info.yaml  hello
sheets/_factor/: _info.yaml
sheets/_forth/: _info.yaml
sheets/_fortran/: _info.yaml
sheets/_fsharp/: _info.yaml  function  hello  module  open  rnuget
sheets/_gap/: _info.yaml
sheets/_go/: Axioms  Channels  Declarations  Maps  Operators  Pointers  (+14 more)
(+437 files in other folders)
